results/SVCOMP/specgen/log-ExSymExeFNEG-2024_03_06_20_51_11.txt
class Main {

  //@ requires x >= 0;
  //@ ensures \result <==> test(x);
  public static boolean f(float x) {
    Main inst = new Main();
    if (x >= 0)
      return inst.test(x);
    return true;
  }

  //@ requires x >= 0;
  //@ ensures \result ==> y <= 0;
  //@ ensures !\result ==> y > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:4: error: non-static method test(float) cannot be referenced from a static context
  //@ ensures \result <==> test(x);
                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:13: error: cannot find symbol
  //@ ensures \result ==> y <= 0;
                          ^
  symbol:   variable y
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:14: error: cannot find symbol
  //@ ensures !\result ==> y > 0;
                           ^
  symbol:   variable y
  location: class Main
3 errors

class Main {

  //@ requires x >= 0;
  //@ ensures \result <==> test(x);
  public static boolean f(float x) {
    Main inst = new Main();
    if (x >= 0)
      return inst.test(x);
    return true;
  }

  //@ requires x >= 0;
  //@ ensures \result ==> -x <= 0;
  //@ ensures !\result ==> -x > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:4: error: non-static method test(float) cannot be referenced from a static context
  //@ ensures \result <==> test(x);
                           ^
1 error

class Main {

  //@ requires x >= 0;
  //@ ensures \result <==> inst.test(x);
  public static boolean f(float x) {
    Main inst = new Main();
    if (x >= 0)
      return inst.test(x);
    return true;
  }

  //@ requires x >= 0;
  //@ ensures \result ==> -x <= 0;
  //@ ensures !\result ==> -x > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:4: error: cannot find symbol
  //@ ensures \result <==> inst.test(x);
                           ^
  symbol:   variable inst
  location: class Main
1 error

class Main {

  //@ requires x >= 0;
  //@ ensures \result <==> this.test(x);
  public static boolean f(float x) {
    Main inst = new Main();
    if (x >= 0)
      return inst.test(x);
    return true;
  }

  //@ requires x >= 0;
  //@ ensures \result ==> -x <= 0;
  //@ ensures !\result ==> -x > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:4: error: non-static variable this cannot be referenced from a static context
  //@ ensures \result <==> this.test(x);
                           ^
1 error

class Main {

  //@ requires x >= 0;
  //@ ensures \result <==> inst.test(x);
  public static boolean f(float x) {
    Main inst = new Main();
    if (x >= 0)
      return inst.test(x);
    return true;
  }

  //@ requires x >= 0;
  //@ ensures \result ==> -x <= 0;
  //@ ensures !\result ==> -x > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:4: error: cannot find symbol
  //@ ensures \result <==> inst.test(x);
                           ^
  symbol:   variable inst
  location: class Main
1 error

class Main {

  //@ requires x >= 0;
  //@ ensures \result <==> test(x);
  public static boolean f(float x) {
    Main inst = new Main();
    if (x >= 0)
      return inst.test(x);
    return true;
  }

  //@ requires x >= 0;
  //@ ensures \result ==> -x <= 0;
  //@ ensures !\result ==> -x > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:4: error: non-static method test(float) cannot be referenced from a static context
  //@ ensures \result <==> test(x);
                           ^
1 error

class Main {

  //@ requires x >= 0;
  //@ ensures \result <==> new Main().test(x);
  public static boolean f(float x) {
    Main inst = new Main();
    if (x >= 0)
      return inst.test(x);
    return true;
  }

  //@ requires x >= 0;
  //@ ensures \result ==> -x <= 0;
  //@ ensures !\result ==> -x > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:4: error: Object allocation is not permitted in specification expressions
  //@ ensures \result <==> new Main().test(x);
                           ^
1 error

class Main {

  //@ requires x >= 0;
  //@ ensures \result <==> test(x);
  public static boolean f(float x) {
    Main inst = new Main();
    if (x >= 0)
      return inst.test(x);
    return true;
  }

  //@ requires x >= 0;
  //@ ensures \result ==> -x <= 0;
  //@ ensures !\result ==> -x > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:4: error: non-static method test(float) cannot be referenced from a static context
  //@ ensures \result <==> test(x);
                           ^
1 error

class Main {

  //@ requires x >= 0;
  //@ ensures \result <==> new Main().test(x);
  public static boolean f(float x) {
    Main inst = new Main();
    if (x >= 0)
      return inst.test(x);
    return true;
  }

  //@ requires x >= 0;
  //@ ensures \result ==> -x <= 0;
  //@ ensures !\result ==> -x > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:4: error: Object allocation is not permitted in specification expressions
  //@ ensures \result <==> new Main().test(x);
                           ^
1 error

class Main {

  //@ requires x >= 0;
  //@ ensures \result <==> test(x);
  public static boolean f(float x) {
    Main inst = new Main();
    if (x >= 0)
      return inst.test(x);
    return true;
  }

  //@ requires x >= 0;
  //@ ensures \result ==> -x <= 0;
  //@ ensures !\result ==> -x > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:4: error: non-static method test(float) cannot be referenced from a static context
  //@ ensures \result <==> test(x);
                           ^
1 error

class Main {

  //@ requires x >= 0;
  //@ ensures \result <==> test(x);  
  public static boolean f(float x) {
    Main inst = new Main();
    if (x >= 0)
      return inst.test(x);
    return true;
  }

  //@ requires x >= 0;
  //@ ensures \result ==> -x <= 0;
  //@ ensures !\result ==> -x > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}

/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:4: error: non-static method test(float) cannot be referenced from a static context
  //@ ensures \result <==> test(x);  
                           ^
1 error

class Main {

  //@ requires x >= 0;
 
  public static boolean f(float x) {
    Main inst = new Main();
    if (x >= 0)
      return inst.test(x);
    return true;
  }

  //@ requires x >= 0;
  //@ ensures \result ==> -x <= 0;
  //@ ensures !\result ==> -x > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}


